style_sheet.css
:root {
  --main-bg-color: #EDB6A3;  /* fallback for old browsers */


}

a {
  text-decoration: underline;
  color: white;
  
}

body {
  /* background: -webkit-linear-gradient(to right, #EDB6A3, #4141FA);   */
  /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(to bottom, #EDB6A3, #0E0EF7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ 
  margin: 40px;
  font-family: 'Source Code Pro', monospace;
  font-weight: normal;
  height: 100%;
}

h1, h2, h3 {
  font-family: 'Helvetica';
  margin: 0;
}

h2 {
  font-size: 30px;
  color: white;
}

h1 {
  font-size: 50px;
  color: white;
  margin-bottom: 10px;
}

.cmv {
  display: grid;
  justify-content: end;
  grid-template-columns: 520px 500px;
  grid-template-rows: 300px auto auto;
  grid-gap: 20px 40px;
}

.sharing-logo {
  width: 59%;
}

.sharing {
  display: grid;
  justify-content: end;
  grid-template-columns: 520px 500px;
  grid-template-rows: 300px auto;
  grid-gap: 20px 40px;
}

.text{
  color:white;
  line-height: auto;
}

blockquote {
  font-size: 30px;
  color: white;
  font-family: 'Helvetica';
  line-height: 44px;
  margin: 30px 120px 76px 120px;
}

.sidebar {
  grid-area: sidebar;
  color:white;
}

#nav a:hover {
  opacity: 0.7;
}

.project-link {
  font-weight: bolder;
}

.project-link:hover{
  opacity: 0.7;
}
.sidetext {
  position: fixed;
  left: -120px;
  top: 300px;
  transform: rotate(90deg);
  color:white;
}



.disclosure {
  font-size: 12px;
}
.content {
  grid-area: content;
  background-size: cover;
}

.content1{
  grid-area: content1;
  background-size: cover;
  /* background: linear-gradient(to top, #EDB6A3, #4141FA) */
}
.content2{
  grid-area: content2;
  background-size: cover;
}
.content3{
  grid-area: content3;
  background-size: cover;
}

.header {
 
  color: white;
  grid-area: header;
  font-weight: bold;
}

.footer {
  grid-area: footer;
  color: white;
  margin-left: 60px;
}

.wrapper {
  margin-left: 60px;
  /* width: calc(100vw - 140px); */
  display: grid;
  grid-gap: 10px 50px;
  /* grid-template-columns: repeat(autofit, minmax(150px, 1fr));   */
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: 80px 400px 100px;
  grid-template-areas:
    "....... header ....."
    "sidebar content ....."
    "....... footer  ....."
    "content1 content1 ....."
    "content2 content2 ....."
    "content3 content3 .....";
}

.fa-linkedin, .fa-instagram, .fa-pinterest, .fa-vimeo, .fa-youtube {
  background: #EDB6A3;
  color: white;
}

.fa {
  padding: 9px;
  font-size: 30px;
  width: 17px;
  text-align: center;
  text-decoration: none;
  margin: 5px 2px;
  border-radius: 50%;
}

.fa:hover {
    opacity: 0.7;
}




li {
  list-style: none;
  margin: 0 20px 0 0 
}


ul {
  display: flex;
  padding-left: 0;
}

@media screen and (max-width: 600px) {
  .wrapper {
    margin-left: 6px;
  grid-template-columns: 290px;    
  grid-template-rows: 260px 565px 500px 2000px 500px 2000px 62px;
    grid-template-areas:
    /* "header" "footer" "sidebar" "content" "content1" "content2" "content3"; */
    "content" "sidebar" "header" "content1" "content2" "content3" "footer";

  }

  ul#nav {
    display: block;
  }

  .greeting {
    max-width: 300px;
  }

  .footer {
    margin-top: 0;
  }

  .sidetext {
    display: none;
  }

  body {
    margin: 30px;
  }

  .cmv {
    display: block;
  }

  .sharing {
    display: block;
  }

  .sharing-logo {
    width: 90%;
  }

  .content1 h1 {
    margin: 48px 0 10px 0;
  }

  .desktop-shot {
    max-width: 300px;
    margin-top: 30px;
  }

  .quotes {
    font-size: 20px;
    line-height: 33px;
    margin: 20px 0 0 10px;
  }

  .footer {
    margin-left: 16px;
  }

  .js-anchor-link {
    border: 1px solid white;
    display: block;
    padding: 30px 0px 0px 0px
  
  }

  ul#nav {
    display: block;
    text-align: center;
  }
}

